--- a/app.json
+++ b/app.json
@@ -25,6 +25,18 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": [
+            {
+              "asset": "./assets/fonts/shelter.otf"
+            }
+          ]
+        }
+      ]
+    ]
   }
 }
