--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.28",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
@@ -17,10 +18,13 @@
     "expo-font": "~11.10.3",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-picker": "^7.1.0",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
