--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/database": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.28",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "expo": "~50.0.8",
+    "expo-build-properties": "~0.11.1",
     "expo-font": "~11.10.3",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
@@ -29,7 +32,8 @@
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
