--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^19.0.1",
-    "@react-native-firebase/database": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.28",
@@ -18,22 +16,23 @@
     "axios": "^1.6.7",
     "expo": "~50.0.8",
     "expo-build-properties": "~0.11.1",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
-    "firebase": "^10.9.0",
+    "firebase": "^9.6.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-picker": "^7.1.0",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "expo-dev-client": "~3.3.11"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
