--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "firebase": "^9.6.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-gravatar": "^1.0.2",
     "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "react-native-screens": "~3.29.0"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
